--- a/Jama/src/main/webapp/agreementWiz.xhtml
+++ b/Jama/src/main/webapp/agreementWiz.xhtml
@@ -1,17 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui"
-	xmlns:sections="http://java.sun.com/jsf/composite/sections"
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:p="http://primefaces.org/ui" xmlns:sections="http://java.sun.com/jsf/composite/sections"
 	xmlns:dialogs="http://java.sun.com/jsf/composite/dialogs">
 
 
 <h:head>
 	<h:outputStylesheet name="agreementWiz.css" library="css" />
 	<h:outputScript name="onEnterPressInWiz.js" library="js" />
-	
+
 </h:head>
 <h:body>
 
@@ -19,11 +15,9 @@
 	<h:form id="agreementWiz">
 
 
-		<input type="hidden" name="cid"
-			value='#{agreementManager.conversation.id}' />
+		<input type="hidden" name="cid" value='#{agreementManager.conversation.id}' />
 
-		<p:wizard step="#{agreementWizardPB.currentTabId}"
-			flowListener="#{agreementWizardPB.handleFlow}">
+		<p:wizard step="#{agreementWizardPB.currentTabId}" flowListener="#{agreementWizardPB.handleFlow}">
 
 			<p:tab id="tabDati" title="#{msgs.data_Tab}">
 				<sections:agreementWizData editingDisable="false" />
@@ -32,7 +26,7 @@
 
 
 			<p:tab id="tabRip" title="#{msgs.shareTable_Tab}">
-				<sections:agreementWizShareTable editingDisable="false"  />
+				<sections:agreementWizShareTable editingDisable="false" />
 			</p:tab>
 
 			<p:tab id="tabInstallments" title="#{msgs.installmentsList_Tab}">
@@ -43,7 +37,7 @@
 			</p:tab>
 
 			<ui:include src="/resources/sections/agreementWizAttachments.xhtml" />
-			
+
 			<ui:include src="/resources/sections/agreementWizLastStep.xhtml" />
 
 
@@ -51,21 +45,13 @@
 		</p:wizard>
 
 
-		<ui:remove>
-			<p:commandButton value="#{msgs.cancel}"
-				action="#{agreementWizardPB.cancel()}" immediate="true" />
-		</ui:remove>
+		<br />
 
-		<p:commandButton type="button" value="#{msgs.cancel}"
-			onclick="w_confirm.show();" />
+		<p:commandButton type="button" value="#{msgs.cancel}" onclick="w_confirm.show();" />
 
-		<p:confirmDialog message="#{msgs.sure}" header="#{msgs.cancel}"
-			severity="alert" widgetVar="w_confirm">
-			<p:commandButton value="#{msgs.yes}"
-				action="#{agreementWizardPB.cancel()}"
-				immediate="true" oncomplete="w_confirm.hide()" />
-			<p:commandButton value="#{msgs.no}" onclick="w_confirm.hide();"
-				type="button" />
+		<p:confirmDialog message="#{msgs.sure}" header="#{msgs.cancel}" severity="alert" widgetVar="w_confirm">
+			<p:commandButton value="#{msgs.yes}" action="#{agreementWizardPB.cancel()}" immediate="true" oncomplete="w_confirm.hide()" />
+			<p:commandButton value="#{msgs.no}" onclick="w_confirm.hide();" type="button" />
 		</p:confirmDialog>
 
 
@@ -79,8 +65,8 @@
 	</dialogs:companyDialog>
 
 	<dialogs:personnelShareDialog name="w_personnelShare"></dialogs:personnelShareDialog>
-	
-			
+
+
 
 
 </h:body>
