--- a/Jama/src/main/webapp/resources/sections/agreementWizData.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementWizData.xhtml
@@ -1,12 +1,8 @@
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:p="http://primefaces.org/ui"
-	xmlns:composite="http://java.sun.com/jsf/composite">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core" xmlns:p="http://primefaces.org/ui" xmlns:composite="http://java.sun.com/jsf/composite">
 
 <composite:interface>
-	<composite:attribute name="editingDisable"></composite:attribute>
+	<composite:attribute name="editingDisable" />
 
 </composite:interface>
 
@@ -24,15 +20,10 @@
 				</p:column>
 
 				<p:column>
-					<h:inputTextarea id="title" cols="20" rows="4"
-						value="#{agreementManager.agreement.title}"
-						label="#{msgs.agrTitle}" required="true"
+					<h:inputTextarea id="title" cols="20" rows="4" value="#{agreementManager.agreement.title}" label="#{msgs.agrTitle}" required="true"
 						rendered="#{cc.attrs.editingDisable == false}" />
 
-					<h:outputText id="title_o"
-						value="#{agreementManager.agreement.title}"
-						label="#{msgs.agrTitle}"
-						rendered="#{cc.attrs.editingDisable == true}" />
+					<h:outputText id="title_o" value="#{agreementManager.agreement.title}" label="#{msgs.agrTitle}" rendered="#{cc.attrs.editingDisable == true}" />
 				</p:column>
 
 				<p:column colspan="2">
@@ -47,26 +38,20 @@
 				</p:column>
 
 				<p:column>
-					<h:inputText id="protocolNumber"
-						value="#{agreementManager.agreement.protocolNumber}"
-						label="#{msgs.protocolNumber}" required="true"
+					<h:inputText id="protocolNumber" value="#{agreementManager.agreement.protocolNumber}" label="#{msgs.protocolNumber}" required="true"
 						rendered="#{cc.attrs.editingDisable == false}">
-						<f:convertNumber minIntegerDigits="6" maxIntegerDigits="6"
-							integerOnly="true" />
+						<f:convertNumber minIntegerDigits="6" maxIntegerDigits="6" integerOnly="true" />
 						<f:ajax event="blur" execute="@this" render="protocolNumberError" />
 					</h:inputText>
 
-					<h:outputText id="protocolNumber_o"
-						value="#{agreementManager.agreement.protocolNumber}"
-						label="#{msgs.protocolNumber}"
+					<h:outputText id="protocolNumber_o" value="#{agreementManager.agreement.protocolNumber}" label="#{msgs.protocolNumber}"
 						rendered="#{cc.attrs.editingDisable == true}">
 					</h:outputText>
 
 				</p:column>
 
 				<p:column colspan="2">
-					<h:message class="errorMessage" id="protocolNumberError"
-						for="protocolNumber" />
+					<h:message class="errorMessage" id="protocolNumberError" for="protocolNumber" />
 				</p:column>
 			</p:row>
 
@@ -90,16 +75,14 @@
 				</p:column>
 
 				<p:column>
-					<h:selectOneMenu id="type"
-						value="#{agreementManager.agreement.type}" label="#{msgs.agrType}"
-						required="true" rendered="#{cc.attrs.editingDisable == false}">
+					<h:selectOneMenu id="type" value="#{agreementManager.agreement.type}" label="#{msgs.agrType}" required="true"
+						rendered="#{cc.attrs.editingDisable == false}">
 						<f:selectItems value="#{utilPB.agreementTypeItems}" />
 						<f:ajax event="blur" execute="@this" render="typeError" />
 
 					</h:selectOneMenu>
 
-					<h:outputText value="#{agreementManager.agreement.type}"
-						rendered="#{cc.attrs.editingDisable == true}" />
+					<h:outputText value="#{agreementManager.agreement.type}" rendered="#{cc.attrs.editingDisable == true}" />
 				</p:column>
 
 
@@ -116,27 +99,21 @@
 				</p:column>
 
 				<p:column>
-					<p:selectOneMenu id="chiefMenu" styleClass="chiefMenu"
-						value="#{agreementManager.agreement.chief}" label="#{msgs.chief}"
-						required="true" filter="true" filterMatchMode="contains"
-						rendered="#{cc.attrs.editingDisable == false}">
+					<p:selectOneMenu id="chiefMenu" styleClass="chiefMenu" value="#{agreementManager.agreement.chief}" label="#{msgs.chief}" required="true"
+						filter="true" filterMatchMode="contains" rendered="#{cc.attrs.editingDisable == false}">
 						<f:selectItems value="#{utilPB.chiefItems}" />
 						<f:converter binding="#{chiefConverter}" />
 
 					</p:selectOneMenu>
 
-					<h:outputText value="#{agreementManager.agreement.chief}"
-						rendered="#{cc.attrs.editingDisable == true}">
+					<h:outputText value="#{agreementManager.agreement.chief}" rendered="#{cc.attrs.editingDisable == true}">
 						<f:converter binding="#{chiefConverter}" />
 					</h:outputText>
 				</p:column>
 
 				<p:column>
-					<p:commandButton value="#{msgs.add}" process="@this"
-						actionListener="#{chiefDialogPCB.clear()}"
-						oncomplete="w_chiefDialog.show()"
-						update=":#{p:component('chiefPanel')}"
-						rendered="#{cc.attrs.editingDisable == false}">
+					<p:commandButton value="#{msgs.add}" process="@this" actionListener="#{chiefDialogPCB.clear()}" oncomplete="w_chiefDialog.show()"
+						update=":#{p:component('chiefPanel')}" rendered="#{cc.attrs.editingDisable == false}">
 						<p:resetInput target=":#{p:component('chiefPanel')}" />
 					</p:commandButton>
 				</p:column>
@@ -154,12 +131,9 @@
 				</p:column>
 
 				<p:column>
-					<h:inputText id="contact"
-						value="#{agreementManager.agreement.contactPerson}"
-						label="#{msgs.contactPerson}" required="true"
+					<h:inputText id="contact" value="#{agreementManager.agreement.contactPerson}" label="#{msgs.contactPerson}" required="true"
 						rendered="#{cc.attrs.editingDisable == false}" />
-					<h:outputText value="#{agreementManager.agreement.contactPerson}"
-						rendered="#{cc.attrs.editingDisable == true}" />
+					<h:outputText value="#{agreementManager.agreement.contactPerson}" rendered="#{cc.attrs.editingDisable == true}" />
 				</p:column>
 
 
@@ -176,26 +150,20 @@
 				</p:column>
 
 				<p:column>
-					<h:selectOneMenu id="companyMenu"
-						value="#{agreementManager.agreement.company}"
-						label="#{msgs.company}" required="true"
+					<h:selectOneMenu id="companyMenu" value="#{agreementManager.agreement.company}" label="#{msgs.company}" required="true"
 						rendered="#{cc.attrs.editingDisable==false}">
 						<f:selectItems value="#{utilPB.companyItems}" />
 						<f:converter binding="#{companyConverter}" />
 					</h:selectOneMenu>
 
-					<h:outputText value="#{agreementManager.agreement.company}"
-						rendered="#{cc.attrs.editingDisable==true}">
+					<h:outputText value="#{agreementManager.agreement.company}" rendered="#{cc.attrs.editingDisable==true}">
 						<f:converter binding="#{companyConverter}" />
 					</h:outputText>
 				</p:column>
 
 				<p:column>
-					<p:commandButton value="#{msgs.add}" process="@this"
-						actionListener="#{companyDialogPCB.clear()}"
-						oncomplete="w_companyDialog.show()"
-						update=":#{p:component('companyPanel')}"
-						rendered="#{cc.attrs.editingDisable == false}">
+					<p:commandButton value="#{msgs.add}" process="@this" actionListener="#{companyDialogPCB.clear()}" oncomplete="w_companyDialog.show()"
+						update=":#{p:component('companyPanel')}" rendered="#{cc.attrs.editingDisable == false}">
 						<p:resetInput target=":#{p:component('companyPanel')}" />
 					</p:commandButton>
 				</p:column>
@@ -213,24 +181,19 @@
 				</p:column>
 
 				<p:column>
-					<h:inputText id="projectNumber"
-						value="#{agreementManager.agreement.CIA_projectNumber}"
-						label="#{msgs.projectNumber}" required="true"
+					<h:inputText id="projectNumber" value="#{agreementManager.agreement.CIA_projectNumber}" label="#{msgs.projectNumber}" required="true"
 						rendered="#{cc.attrs.editingDisable==false}">
 						<f:ajax event="blur" execute="@this" render="projectNumberError" />
 					</h:inputText>
 
-					<h:outputText id="projectNumber_o"
-						value="#{agreementManager.agreement.CIA_projectNumber}"
-						label="#{msgs.projectNumber}"
+					<h:outputText id="projectNumber_o" value="#{agreementManager.agreement.CIA_projectNumber}" label="#{msgs.projectNumber}"
 						rendered="#{cc.attrs.editingDisable==true}">
 					</h:outputText>
 
 				</p:column>
 
 				<p:column colspan="2">
-					<h:message class="errorMessage" id="projectNumberError"
-						for="projectNumber" />
+					<h:message class="errorMessage" id="projectNumberError" for="projectNumber" />
 				</p:column>
 			</p:row>
 
@@ -242,25 +205,20 @@
 				</p:column>
 
 				<p:column>
-					<h:inputText id="inventoryNumber"
-						value="#{agreementManager.agreement.inventoryNumber}"
-						label="#{msgs.agrInventory}" required="true"
+					<h:inputText id="inventoryNumber" value="#{agreementManager.agreement.inventoryNumber}" label="#{msgs.agrInventory}" required="true"
 						rendered="#{cc.attrs.editingDisable ==false}">
 						<f:ajax event="blur" execute="@this" render="inventoryNumberError" />
 
 					</h:inputText>
 
-					<h:outputText id="inventoryNumber_o"
-						value="#{agreementManager.agreement.inventoryNumber}"
-						label="#{msgs.agrInventory}"
+					<h:outputText id="inventoryNumber_o" value="#{agreementManager.agreement.inventoryNumber}" label="#{msgs.agrInventory}"
 						rendered="#{cc.attrs.editingDisable ==true}">
 
 					</h:outputText>
 				</p:column>
 
 				<p:column colspan="2">
-					<h:message class="errorMessage" id="inventoryNumberError"
-						for="inventoryNumber" />
+					<h:message class="errorMessage" id="inventoryNumberError" for="inventoryNumber" />
 				</p:column>
 			</p:row>
 
@@ -272,25 +230,20 @@
 				</p:column>
 
 				<p:column>
-					<h:inputText id="taxableAmount"
-						value="#{agreementManager.agreement.wholeTaxableAmount}"
-						label="#{msgs.taxableAmount}" required="true"
+					<h:inputText id="taxableAmount" value="#{agreementManager.agreement.wholeTaxableAmount}" label="#{msgs.taxableAmount}" required="true"
 						rendered="#{cc.attrs.editingDisable == false}">
-						<f:convertNumber />
+						<f:convertNumber maxFractionDigits="2" locale="en_us" />
 						<f:validateDoubleRange minimum="0.0" />
-						<f:ajax render="amount taxAmountError" />
+						<f:ajax render="amount taxAmountError @this" />
 					</h:inputText>
 
-					<h:outputText id="taxableAmount_o"
-						value="#{agreementManager.agreement.wholeTaxableAmount}"
-						label="#{msgs.taxableAmount}"
+					<h:outputText id="taxableAmount_o" value="#{agreementManager.agreement.wholeTaxableAmount}" label="#{msgs.taxableAmount}"
 						rendered="#{cc.attrs.editingDisable == true}">
 					</h:outputText>
 				</p:column>
 
 				<p:column colspan="2">
-					<h:message id="taxAmountError" class="errorMessage"
-						for="taxableAmount" />
+					<h:message id="taxAmountError" class="errorMessage" for="taxableAmount" />
 				</p:column>
 			</p:row>
 
@@ -302,18 +255,14 @@
 				</p:column>
 
 				<p:column>
-					<h:inputText id="iva"
-						value="#{agreementManager.agreement.IVA_amount}"
-						label="#{msgs.iva}" required="true"
+					<h:inputText id="iva" value="#{agreementManager.agreement.IVA_amount}" label="#{msgs.iva}" required="true"
 						rendered="#{cc.attrs.editingDisable == false}">
 						<f:convertNumber />
 						<f:validateDoubleRange minimum="0.0" maximum="100.0" />
 						<f:ajax render="amount ivaError" />
 					</h:inputText>
 
-					<h:outputText id="iva_o"
-						value="#{agreementManager.agreement.IVA_amount}"
-						label="#{msgs.iva}" required="true"
+					<h:outputText id="iva_o" value="#{agreementManager.agreement.IVA_amount}" label="#{msgs.iva}" required="true"
 						rendered="#{cc.attrs.editingDisable == true}">
 
 					</h:outputText>
@@ -332,8 +281,7 @@
 				</p:column>
 
 				<p:column colspan="3">
-					<h:outputText id="amount"
-						value="#{agreementManager.agreement.wholeAmount}" readonly="true">
+					<h:outputText id="amount" value="#{agreementManager.agreement.wholeAmount}" readonly="true">
 						<f:convertNumber type="currency" currencySymbol="€" />
 					</h:outputText>
 				</p:column>
@@ -348,30 +296,24 @@
 				</p:column>
 
 				<p:column>
-					<h:inputText id="reservedAmount"
-						value="#{agreementManager.agreement.reservedAmount}"
-						label="#{msgs.reservedAmount}" required="true"
+					<h:inputText id="reservedAmount" value="#{agreementManager.agreement.reservedAmount}" label="#{msgs.reservedAmount}" required="true"
 						rendered="#{cc.attrs.editingDisable == false}">
 						<f:convertNumber />
 						<f:ajax event="blur" execute="@this spentAmount" render="reservedAmountError spentAmountError" />
-						<f:validateDoubleRange minimum="0.0"
-							maximum="#{agreementManager.agreement.turnOver}"  />
+						<f:validateDoubleRange minimum="0.0" maximum="#{agreementManager.agreement.turnOver}" />
 					</h:inputText>
 
-					<h:outputText id="reservedAmount_o"
-						value="#{agreementManager.agreement.reservedAmount}"
-						label="#{msgs.reservedAmount}"
+					<h:outputText id="reservedAmount_o" value="#{agreementManager.agreement.reservedAmount}" label="#{msgs.reservedAmount}"
 						rendered="#{cc.attrs.editingDisable == true}">
 					</h:outputText>
 				</p:column>
 
 				<p:column colspan="2">
-					<h:message id="reservedAmountError" class="errorMessage"
-						for="reservedAmount" />
+					<h:message id="reservedAmountError" class="errorMessage" for="reservedAmount" />
 				</p:column>
 			</p:row>
-			
-			
+
+
 			<p:row>
 
 				<p:column>
@@ -379,26 +321,21 @@
 				</p:column>
 
 				<p:column>
-					<h:inputText id="spentAmount"
-						value="#{agreementManager.agreement.spentAmount}"
-						label="#{msgs.spentAmount}" required="true"
-						rendered="#{cc.attrs.editingDisable == false}" validator="#{agreementWizardPB.validateSpentAmount}"> 
+					<h:inputText id="spentAmount" value="#{agreementManager.agreement.spentAmount}" label="#{msgs.spentAmount}" required="true"
+						rendered="#{cc.attrs.editingDisable == false}" validator="#{agreementWizardPB.validateSpentAmount}">
 						<f:convertNumber />
 						<f:ajax event="blur" execute="@this" render="spentAmountError" />
-<!-- 						<f:validateDoubleRange minimum="0.0" -->
-<!-- 							maximum="#{agreementManager.agreement.reservedAmount}" /> -->
+						<!-- 						<f:validateDoubleRange minimum="0.0" -->
+						<!-- 							maximum="#{agreementManager.agreement.reservedAmount}" /> -->
 					</h:inputText>
 
-					<h:outputText id="spentAmount_o"
-						value="#{agreementManager.agreement.spentAmount}"
-						label="#{msgs.spentAmount}"
+					<h:outputText id="spentAmount_o" value="#{agreementManager.agreement.spentAmount}" label="#{msgs.spentAmount}"
 						rendered="#{cc.attrs.editingDisable == true}">
 					</h:outputText>
 				</p:column>
 
 				<p:column colspan="2">
-					<h:message id="spentAmountError" class="errorMessage"
-						for="spentAmount" />
+					<h:message id="spentAmountError" class="errorMessage" for="spentAmount" />
 				</p:column>
 			</p:row>
 
@@ -412,16 +349,12 @@
 				</p:column>
 
 				<p:column>
-					<p:calendar id="approvalDate" pattern="dd/MM/yyyy"
-						readonlyInput="true" showOn="both" showOtherMonths="true"
-						required="true" value="#{agreementManager.agreement.approvalDate}"
-						rendered="#{cc.attrs.editingDisable == false}">
+					<p:calendar id="approvalDate" pattern="dd/MM/yyyy" readonlyInput="true" showOn="both" showOtherMonths="true" required="true"
+						value="#{agreementManager.agreement.approvalDate}" rendered="#{cc.attrs.editingDisable == false}">
 						<f:convertDateTime type="date" pattern="dd/MM/yyyy" />
 					</p:calendar>
 
-					<h:outputText id="approvalDate_o"
-						value="#{agreementManager.agreement.approvalDate}"
-						rendered="#{cc.attrs.editingDisable == true}">
+					<h:outputText id="approvalDate_o" value="#{agreementManager.agreement.approvalDate}" rendered="#{cc.attrs.editingDisable == true}">
 						<f:convertDateTime type="date" pattern="dd/MM/yyyy" />
 					</h:outputText>
 				</p:column>
@@ -439,16 +372,12 @@
 				</p:column>
 
 				<p:column>
-					<p:calendar id="beginDate" pattern="dd/MM/yyyy"
-						readonlyInput="true" showOn="both" showOtherMonths="true"
-						required="true" value="#{agreementManager.agreement.beginDate}"
-						rendered="#{cc.attrs.editingDisable == false}">
+					<p:calendar id="beginDate" pattern="dd/MM/yyyy" readonlyInput="true" showOn="both" showOtherMonths="true" required="true"
+						value="#{agreementManager.agreement.beginDate}" rendered="#{cc.attrs.editingDisable == false}">
 						<f:convertDateTime type="date" pattern="dd/MM/yyyy" />
 					</p:calendar>
 
-					<h:outputText id="beginDate_o"
-						value="#{agreementManager.agreement.beginDate}"
-						rendered="#{cc.attrs.editingDisable == true}">
+					<h:outputText id="beginDate_o" value="#{agreementManager.agreement.beginDate}" rendered="#{cc.attrs.editingDisable == true}">
 						<f:convertDateTime type="date" pattern="dd/MM/yyyy" />
 					</h:outputText>
 
@@ -468,16 +397,12 @@
 				</p:column>
 
 				<p:column>
-					<p:calendar id="deadlineDate" pattern="dd/MM/yyyy"
-						readonlyInput="true" showOn="both" showOtherMonths="true"
-						required="true" value="#{agreementManager.agreement.deadlineDate}"
-						rendered="#{cc.attrs.editingDisable == false}">
+					<p:calendar id="deadlineDate" pattern="dd/MM/yyyy" readonlyInput="true" showOn="both" showOtherMonths="true" required="true"
+						value="#{agreementManager.agreement.deadlineDate}" rendered="#{cc.attrs.editingDisable == false}">
 						<f:convertDateTime type="date" pattern="dd/MM/yyyy" />
 					</p:calendar>
 
-					<h:outputText id="deadlineDate_o"
-						value="#{agreementManager.agreement.deadlineDate}"
-						rendered="#{cc.attrs.editingDisable == true}">
+					<h:outputText id="deadlineDate_o" value="#{agreementManager.agreement.deadlineDate}" rendered="#{cc.attrs.editingDisable == true}">
 						<f:convertDateTime type="date" pattern="dd/MM/yyyy" />
 					</h:outputText>
 
