--- a/Jama/src/main/webapp/resources/sections/agreementWizShareTable.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementWizShareTable.xhtml
@@ -7,9 +7,7 @@
 
 <composite:implementation>
 
-
-
-	<p:panel header="Tabella di ripartizione">
+	<p:panel header="#{msgs.shareTable_Header}">
 
 		<h:panelGrid id="agrValuesGrid" columns="4" columnClasses="label, value, percents, errorMessage" styleClass="grid">
 
