--- a/Jama/src/main/webapp/resources/sections/installmentWizShareTable.xhtml
+++ b/Jama/src/main/webapp/resources/sections/installmentWizShareTable.xhtml
@@ -9,7 +9,7 @@
 
 
 
-	<p:panel header="Tabella di ripartizione">
+	<p:panel header="#{msgs.shareTable_Header}">
 
 		<h:panelGrid id="instValuesGrid" columns="4" columnClasses="label, value, percents, errorMessage" styleClass="grid">
 
