FreeMaker has joined us!

--- a/Jama/src/main/webapp/login.xhtml
+++ b/Jama/src/main/webapp/login.xhtml
@@ -13,6 +13,11 @@
 	<h:form>
 	<h:outputText value="Please Login" />
 	<h:commandButton value="Login" action="#{userManager.login()}" />
+	
+	<br />
+	<br />
+	
+	<h:commandButton value="Stampa test FM" action="#{chiefConverter.testFM()}" />
 	</h:form>
 	
 	
