--- a/Jama/src/main/webapp/login.xhtml
+++ b/Jama/src/main/webapp/login.xhtml
@@ -14,9 +14,9 @@
 	<h:form>
 		<h:outputText value="Please Login" />
 		<h:panelGrid columns="2">
-			<h:outputText value="Matricola: " />
+			<h:outputText value="#{msgs.serialNumber}: " />
 			<p:inputText id="serialNumber" binding="#{serialNumber}" />
-			<h:outputText value="Password: " />
+			<h:outputText value="#{msgs.password}: " />
 			<p:password id="password" binding="#{password}" />
 		</h:panelGrid>
 		<p:commandButton value="Login"
