--- a/Jama/src/main/webapp/login.xhtml
+++ b/Jama/src/main/webapp/login.xhtml
@@ -12,10 +12,13 @@
 <h:body>
 
 	<h:form>
+		<p:messages id="messages" showDetail="false" autoUpdate="true"
+			closable="true" />
+
 		<h:outputText value="Please Login" />
 		<h:panelGrid columns="2">
 			<h:outputText value="#{msgs.serialNumber}: " />
-			<p:inputText id="serialNumber" binding="#{serialNumber}" />
+			<p:inputText id="serialNumber" binding="#{serialNumber}" required="true" label="#{msgs.serialNumber}"/>
 			<h:outputText value="#{msgs.password}: " />
 			<p:password id="password" binding="#{password}" />
 		</h:panelGrid>
