--- a/Jama/src/main/webapp/resources/sections/agreementWizData.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementWizData.xhtml
@@ -232,13 +232,21 @@
 				<p:column>
 					<h:inputText id="taxableAmount" value="#{agreementManager.agreement.wholeTaxableAmount}" label="#{msgs.taxableAmount}" required="true"
 						rendered="#{cc.attrs.editingDisable == false}">
-						<f:convertNumber maxFractionDigits="2" locale="en_us" />
-						<f:validateDoubleRange minimum="0.0" />
+						<ui:remove>
+							<f:convertNumber maxFractionDigits="2" locale="en_us" />
+							<f:validateDoubleRange minimum="0.0" />
+						</ui:remove>
+						<f:converter binding="#{moneyConverter}" />
 						<f:ajax render="amount taxAmountError @this" />
 					</h:inputText>
 
 					<h:outputText id="taxableAmount_o" value="#{agreementManager.agreement.wholeTaxableAmount}" label="#{msgs.taxableAmount}"
 						rendered="#{cc.attrs.editingDisable == true}">
+						<ui:remove>
+							<f:converter binding="#{moneyConverter}">
+								<f:attribute name="plain" value="true" />
+							</f:converter>
+						</ui:remove>
 					</h:outputText>
 				</p:column>
 
@@ -257,14 +265,16 @@
 				<p:column>
 					<h:inputText id="iva" value="#{agreementManager.agreement.IVA_amount}" label="#{msgs.iva}" required="true"
 						rendered="#{cc.attrs.editingDisable == false}">
-						<f:convertNumber />
-						<f:validateDoubleRange minimum="0.0" maximum="100.0" />
+						<ui:remove>
+							<f:convertNumber />
+							<f:validateDoubleRange minimum="0.0" maximum="100.0" />
+						</ui:remove>
+						<f:converter binding="#{percentConverter}" />
 						<f:ajax render="amount ivaError" />
 					</h:inputText>
 
 					<h:outputText id="iva_o" value="#{agreementManager.agreement.IVA_amount}" label="#{msgs.iva}" required="true"
 						rendered="#{cc.attrs.editingDisable == true}">
-
 					</h:outputText>
 				</p:column>
 
@@ -287,59 +297,59 @@
 				</p:column>
 			</p:row>
 
+			<ui:remove>
+
+				<p:row>
+
+					<p:column>
+						<h:outputText value="#{msgs.reservedAmount}" />
+					</p:column>
+
+					<p:column>
+						<h:inputText id="reservedAmount" value="#{agreementManager.agreement.reservedAmount}" label="#{msgs.reservedAmount}" required="true"
+							rendered="#{cc.attrs.editingDisable == false}">
+							<f:convertNumber />
+							<f:ajax event="blur" execute="@this spentAmount" render="reservedAmountError spentAmountError" />
+							<f:validateDoubleRange minimum="0.0" maximum="#{agreementManager.agreement.turnOver}" />
+						</h:inputText>
+
+						<h:outputText id="reservedAmount_o" value="#{agreementManager.agreement.reservedAmount}" label="#{msgs.reservedAmount}"
+							rendered="#{cc.attrs.editingDisable == true}">
+						</h:outputText>
+					</p:column>
+
+					<p:column colspan="2">
+						<h:message id="reservedAmountError" class="errorMessage" for="reservedAmount" />
+					</p:column>
+				</p:row>
 
 
-			<p:row>
+				<p:row>
 
-				<p:column>
-					<h:outputText value="#{msgs.reservedAmount}" />
-				</p:column>
+					<p:column>
+						<h:outputText value="#{msgs.spentAmount}" />
+					</p:column>
 
-				<p:column>
-					<h:inputText id="reservedAmount" value="#{agreementManager.agreement.reservedAmount}" label="#{msgs.reservedAmount}" required="true"
-						rendered="#{cc.attrs.editingDisable == false}">
-						<f:convertNumber />
-						<f:ajax event="blur" execute="@this spentAmount" render="reservedAmountError spentAmountError" />
-						<f:validateDoubleRange minimum="0.0" maximum="#{agreementManager.agreement.turnOver}" />
-					</h:inputText>
+					<p:column>
+						<h:inputText id="spentAmount" value="#{agreementManager.agreement.spentAmount}" label="#{msgs.spentAmount}" required="true"
+							rendered="#{cc.attrs.editingDisable == false}" validator="#{agreementWizardPB.validateSpentAmount}">
+							<f:convertNumber />
+							<f:ajax event="blur" execute="@this" render="spentAmountError" />
+							<!-- 						<f:validateDoubleRange minimum="0.0" -->
+							<!-- 							maximum="#{agreementManager.agreement.reservedAmount}" /> -->
+						</h:inputText>
 
-					<h:outputText id="reservedAmount_o" value="#{agreementManager.agreement.reservedAmount}" label="#{msgs.reservedAmount}"
-						rendered="#{cc.attrs.editingDisable == true}">
-					</h:outputText>
-				</p:column>
+						<h:outputText id="spentAmount_o" value="#{agreementManager.agreement.spentAmount}" label="#{msgs.spentAmount}"
+							rendered="#{cc.attrs.editingDisable == true}">
+						</h:outputText>
+					</p:column>
 
-				<p:column colspan="2">
-					<h:message id="reservedAmountError" class="errorMessage" for="reservedAmount" />
-				</p:column>
-			</p:row>
+					<p:column colspan="2">
+						<h:message id="spentAmountError" class="errorMessage" for="spentAmount" />
+					</p:column>
+				</p:row>
 
-
-			<p:row>
-
-				<p:column>
-					<h:outputText value="#{msgs.spentAmount}" />
-				</p:column>
-
-				<p:column>
-					<h:inputText id="spentAmount" value="#{agreementManager.agreement.spentAmount}" label="#{msgs.spentAmount}" required="true"
-						rendered="#{cc.attrs.editingDisable == false}" validator="#{agreementWizardPB.validateSpentAmount}">
-						<f:convertNumber />
-						<f:ajax event="blur" execute="@this" render="spentAmountError" />
-						<!-- 						<f:validateDoubleRange minimum="0.0" -->
-						<!-- 							maximum="#{agreementManager.agreement.reservedAmount}" /> -->
-					</h:inputText>
-
-					<h:outputText id="spentAmount_o" value="#{agreementManager.agreement.spentAmount}" label="#{msgs.spentAmount}"
-						rendered="#{cc.attrs.editingDisable == true}">
-					</h:outputText>
-				</p:column>
-
-				<p:column colspan="2">
-					<h:message id="spentAmountError" class="errorMessage" for="spentAmount" />
-				</p:column>
-			</p:row>
-
-
+			</ui:remove>
 
 
 			<p:row>
